<resources>
    <string name="app_name">OriginalDB</string>
    <string name="default_serie_picture">https://api.tinyfox.dev/img?animal=wolf</string>
    <string name="default_episode_picture">https://api.tinyfox.dev/img?animal=yote</string>
    <string name="default_cast_picture">https://wallpapers-clan.com/wp-content/uploads/2022/08/default-pfp-18.jpg</string>
    <string name="bottombar_series">Series</string>
    <string name="bottombar_favorites">Favorites</string>
    <string name="bottombar_trivia">Trivia</string>
    <string name="trivia_fragment">This is the trivia fragment</string>
    <string name="favorite_fragment_default">Favorite tab</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="favorite">Favorite</string>
    <string name="cast">Cast</string>
    <string name="episodes">Episodes</string>
    <string name="images">Images</string>
    <string name="back">back</string>
    <string name="premiered">Premiered:   </string>
    <string name="genres">Genres:</string>
    <string name="ended">Ended:</string>
    <string name="status">Status:</string>
    <string name="type">Type:</string>
    <string name="language">Language:</string>
    <string name="network">Network:</string>
    <string name="season">Season :</string>
    <string name="season_no">Season</string>
    <string name="season_episodes">Episodes</string>
    <string name="season_premiered">Debut</string>
    <string name="season_ended">Ended</string>
    <string name="show_rating">Rating:</string>
    <string name="show_runtime">Runtime:</string>
    <string name="sort_option">Sort</string>
    <string name="sort">Sort</string>
    <string name="random">Random Movie</string>
    <string name="dark_mode_on" />
    <string name="color_mode" />
</resources>