<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/showNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white"
        android:theme="@style/Base.Theme.OrignalDB"
        app:titleTextColor="?attr/colorOnPrimary"
        app:menu="@menu/show_menu"
        tools:showIn="@layout/show_layout"
    />

    <ImageView
        android:id="@+id/show_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            tools:hint="This is a great test!"
            android:textSize="20sp"
            android:id="@+id/show_name"
            android:fontFamily="sans-serif-black"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:hint="This is a description."
            android:textSize="16sp"
            android:id="@+id/show_desc"
        />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginVertical="10sp"
            >
        <TableRow android:paddingVertical="10sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/genres"
                android:textSize="16sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:hint="This is a great test!"
                android:textSize="16sp"
                android:id="@+id/show_genres"
                android:layout_weight="1"

                />
        </TableRow>

        <TableRow android:paddingVertical="10sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/premiered"
                android:textSize="16sp"
                android:fontFamily="sans-serif-black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:hint="This is a great test!"
                android:textSize="16sp"
                android:id="@+id/show_premiered"
                android:layout_weight="1"
                />
        </TableRow>

        <TableRow android:paddingVertical="10sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ended"
                android:textSize="16sp"
                android:fontFamily="sans-serif-black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:hint="This is a great test!"
                android:textSize="16sp"
                android:id="@+id/show_ended"
                android:layout_weight="1"
                />
        </TableRow>

        <TableRow android:paddingVertical="10sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="16sp"
                android:fontFamily="sans-serif-black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:hint="This is a great test!"
                android:textSize="16sp"
                android:id="@+id/show_status"
                android:layout_weight="1"
                />
        </TableRow>

        <TableRow android:paddingVertical="10sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="16sp"
                android:fontFamily="sans-serif-black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:hint="This is a great test!"
                android:textSize="16sp"
                android:id="@+id/show_type"
                android:layout_weight="1"
                />
        </TableRow>

            <TableRow android:paddingVertical="10sp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:hint="This is a great test!"
                    android:textSize="16sp"
                    android:id="@+id/show_lang"
                    android:layout_weight="1"
                    />
            </TableRow>

            <TableRow android:paddingVertical="10sp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/network"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:hint="This is a great test!"
                    android:textSize="16sp"
                    android:id="@+id/show_network"
                    android:layout_weight="1"
                    />
            </TableRow>
        </TableLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:background="?android:attr/listDivider" />
        <TableLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:stretchColumns="*"
            android:paddingVertical="5dp"
            >
        <TableRow
            android:background="?attr/colorPrimary"
            android:paddingVertical="10dp"
            android:id="@+id/seasonRow"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/season_no"
                android:textSize="16sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:textColor="?attr/colorOnPrimary"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/season_episodes"
                android:textSize="16sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:textColor="?attr/colorOnPrimary"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/season_premiered"
                android:textSize="16sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:textColor="?attr/colorOnPrimary"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/season_ended"
                android:textSize="16sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:textColor="?attr/colorOnPrimary"
                />



        </TableRow>
        </TableLayout>
    </LinearLayout>




</LinearLayout>
